Moved shift javascript to coffescript. Various css fixes.

--- a/app/assets/stylesheets/shift.css.scss
+++ b/app/assets/stylesheets/shift.css.scss
@@ -1,7 +1,17 @@
 // Place all the styles related to the shift controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import "bootstrap_and_overrides";
+
 .fc-content th
 {
   font-size: xx-small;
+}
+
+.fc-grid table {
+	@extend .table;
+	@extend .table-striped;
+	@extend .table-bordered;
+	@extend .table-condensed;
 }
